<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        app:layoutDescription="@xml/main_activity"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/download_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/dload"
            app:layout_constraintBottom_toTopOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_constraint">

            <RadioButton
                android:id="@+id/glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:padding="12dp"
                android:text="@string/glide_text"
                android:textColor="#434343"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/loadapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:padding="12dp"
                android:text="@string/loadapp_text"
                android:textColor="#434343"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/retrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:padding="12dp"
                android:text="@string/retrofit_text"
                android:textColor="#434343"
                android:textSize="18sp" />
        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            app:buttonColor="@color/colorPrimary"
            app:circleColor="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.0"
            app:textColor="@color/white" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>